syntax = "proto3";

package batchmanager;

option java_package = "pl.edu.mimuw.proto.batchmanager";
option java_multiple_files = true;

import "common/common.proto";
import "healthcheck/healthcheck.proto";

service BatchManager {
  rpc DoBatch(common.Batch) returns (common.Response) {}
  rpc HealthCheck(healthcheck.Ping) returns (healthcheck.PingResponse) {}
}
